--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_LOG_LEVEL=debug
 LOG_CHANNEL=stack
 APP_URL=http://localhost
 
@@ -15,7 +14,7 @@ DB_PASSWORD=secret
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
-QUEUE_DRIVER=sync
+QUEUE_CONNECTION=sync
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
