--- a/composer.json
+++ b/composer.json
@@ -9,17 +9,16 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "cloudcreativity/laravel-json-api": "^1.0",
+        "cloudcreativity/laravel-json-api": "^1.4",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.3",
         "iboldurev/api-ai-php": "^0.2.5",
         "intervention/image": "^2.4",
         "ixudra/curl": "^6.10",
-        "laravel/framework": "5.8.*",
+        "laravel/framework": "^6.0",
         "laravel/slack-notification-channel": "^2.0",
-        "laravel/socialite": "^3.0",
+        "laravel/socialite": "^4.0",
         "laravel/tinker": "~1.0",
-        "mressex/laravel-auth-profile": "^1.0",
         "pda/pheanstalk": "~4.0",
         "predis/predis": "^1.1",
         "socialiteproviders/slack": "^3.0",
@@ -30,7 +29,6 @@
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~8.0",
-        "xethron/migrations-generator": "^2.0",
         "filp/whoops": "~2.0"
     },
     "autoload": {
