--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,12 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "cloudcreativity/laravel-json-api": "^0.7.0",
+        "cloudcreativity/laravel-json-api": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "iboldurev/api-ai-php": "^0.2.5",
         "intervention/image": "^2.4",
         "ixudra/curl": "^6.10",
-        "laravel/framework": "5.4.*",
+        "laravel/framework": "5.5.*",
         "laravel/socialite": "^3.0",
         "laravel/tinker": "~1.0",
         "mressex/laravel-auth-profile": "^1.0",
@@ -24,8 +24,9 @@
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.7",
-        "xethron/migrations-generator": "^2.0"
+        "phpunit/phpunit": "~6.0",
+        "xethron/migrations-generator": "^2.0",
+        "filp/whoops": "~2.0"
     },
     "autoload": {
         "classmap": [
@@ -54,7 +55,11 @@
         "post-update-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
             "php artisan optimize"
-        ]
+        ],
+        "post-autoload-dump": [
+            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "@php artisan package:discover"
+        ]    
     },
     "config": {
         "preferred-install": "dist",
