--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,12 @@
         "iboldurev/api-ai-php": "^0.2.5",
         "intervention/image": "^2.4",
         "ixudra/curl": "^6.10",
-        "laravel/framework": "5.7.*",
+        "laravel/framework": "5.8.*",
+        "laravel/slack-notification-channel": "^2.0",
         "laravel/socialite": "^3.0",
         "laravel/tinker": "~1.0",
         "mressex/laravel-auth-profile": "^1.0",
-        "pda/pheanstalk": "^3.1",
+        "pda/pheanstalk": "~4.0",
         "predis/predis": "^1.1",
         "socialiteproviders/slack": "^3.0",
         "tburry/pquery": "^1.1",
@@ -24,7 +25,7 @@
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~7.0",
+        "phpunit/phpunit": "~8.0",
         "xethron/migrations-generator": "^2.0",
         "filp/whoops": "~2.0"
     },
