--- a/composer.json
+++ b/composer.json
@@ -22,10 +22,11 @@
         "venturecraft/revisionable": "^1.28"
     },
     "require-dev": {
+        "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~8.0",
-        "filp/whoops": "~2.0"
+        "sempro/phpunit-pretty-print": "^1.2"
     },
     "autoload": {
         "classmap": [
