--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=5.6.4",
         "cloudcreativity/laravel-json-api": "^1.4",
         "guzzlehttp/guzzle": "^6.3",
+        "haruncpi/laravel-log-reader": "^1.0",
         "iboldurev/api-ai-php": "^0.2.5",
         "intervention/image": "^2.4",
         "ixudra/curl": "^6.10",
