Add env sync and sync env to default

--- a/.env.example
+++ b/.env.example
@@ -1,32 +1,85 @@
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:WYEFjUwqBFd8WE69sm91708MzU/mdKhigYWWdYQBLQA=
 APP_DEBUG=true
-APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+LOG_CHANNEL=stack
+APP_URL=https://trybot2000.meow
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=flaversham
+DB_USERNAME=root
+DB_PASSWORD=
+
+DB_FANTASYFOOTBALL_HOST=127.0.0.1
+DB_FANTASYFOOTBALL_PORT=3306
+DB_FANTASYFOOTBALL_DATABASE=tryhardfantasyfootball
+DB_FANTASYFOOTBALL_USERNAME=root
+DB_FANTASYFOOTBALL_PASSWORD=
+
+DB_SLACK_HOST=127.0.0.1
+DB_SLACK_PORT=3306
+DB_SLACK_DATABASE=slack
+DB_SLACK_USERNAME=root
+DB_SLACK_PASSWORD=
+
+DB_TRYBOT2000_HOST=127.0.0.1
+DB_TRYBOT2000_PORT=3306
+DB_TRYBOT2000_DATABASE=trybot2000
+DB_TRYBOT2000_USERNAME=root
+DB_TRYBOT2000_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
-QUEUE_DRIVER=sync
+QUEUE_CONNECTION=sync
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
+MAIL_DRIVER=mailgun
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
+MAILGUN_DOMAIN="send.trybot2000.com"
+MAILGUN_SECRET=""
+
+DISCORD_CLIENT_ID=""
+DISCORD_CLIENT_SECRET=""
+DISCORD_TRYBOT_USERNAME="TryBot#3665"
+DISCORD_TRYBOT_TOKEN=""
+
+SLACK_BOT_HI_TOKEN=""
+SLACK_BOT_TRYBOT_TOKEN=""
+
+SLACK_APP_TRYBOT_OAUTH_ACCESS_TOKEN=""
+SLACK_APP_TRYBOT_BOT_USER_OAUTH_ACCESS_TOKEN=""
+
+SLACK_APP_TRYBOT_CLIENT_ID=""
+SLACK_APP_TRYBOT_CLIENT_SECRET=""
+SLACK_APP_TRYBOT_VERIFICATION_TOKEN=""
+SLACK_APP_TRYBOT_REDIRECT_URI="http://trybot2000.meow/auth/slack/callback"
+
+SLACK_APP_FANTASYBOT_OAUTH_ACCESS_TOKEN=""
+
+SLACK_LEGACY_TOKEN=""
+
+GOOGLE_KNOWLEDGE_GRAPH_TOKEN=""
+GOOGLE_TIME_ZONE_API_KEY=""
+GOOGLE_GEOCODING_API_KEY=""
+
+API_AI_CLIENT_ACCESS_TOKEN=""
+
+TWITCH_API_CLIENT_ID=""
+
+SLACK_WEBHOOK_FANTASYFOOTBALL=""
+SLACK_WEBHOOK_TRYHARDFOOTBALL=""
+SLACK_WEBHOOK_TESTCHANNEL=""
+
+STREAMLABS_CLIENT_ID=""
+STREAMLABS_CLIENT_SECRET=""
+STREAMLABS_API_ACCESS_TOKEN=""
