--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "iboldurev/api-ai-php": "^0.2.5",
         "intervention/image": "^2.4",
         "ixudra/curl": "^6.10",
+        "jtant/laravel-env-sync": "^3.0",
         "laravel/framework": "^6.0",
         "laravel/slack-notification-channel": "^2.0",
         "laravel/socialite": "^4.0",
