--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
     "require-dev": {
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
+        "laravel/ui": "^1.2",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~8.0",
         "sempro/phpunit-pretty-print": "^1.2"
