--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -11,10 +11,19 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v1
-    - name: Basic build and test
-      run: |
-        cp .env.example .env
-        composer install
-        php artisan key:generate
-        ./vendor/phpunit/phpunit/phpunit
+      - name: Git checkout
+        uses: actions/checkout@v2.0.0
+      
+      - name: Start redis server
+        uses: superchargejs/redis-github-action@v1
+        
+      - name: Build and test
+        env:
+          APP_ENV: testing
+          DISCORD_TRYBOT_TOKEN: ${{ secrets.DISCORD_TRYBOT_TOKEN }}
+        run: |
+          cp .env.example .env
+          composer install
+          php artisan key:generate
+          ./vendor/phpunit/phpunit/phpunit
+        
