--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v2.0.0
       
       - name: Start redis server
-        uses: superchargejs/redis-github-action@v1
+        uses: supercharge/redis-github-action@1.1.0
         
       - name: Build and test
         env:
