Add reddit modqueue watcher

--- a/.env.example
+++ b/.env.example
@@ -83,3 +83,12 @@ SLACK_WEBHOOK_TESTCHANNEL=""
 STREAMLABS_CLIENT_ID=""
 STREAMLABS_CLIENT_SECRET=""
 STREAMLABS_API_ACCESS_TOKEN=""
+
+REDDIT_RSS_FEED_TOKEN=""
+REDDIT_RSS_FEED_USER=""
+
+SLACK_MEOWBOT_CLIENT_ID=""
+SLACK_MEOWBOT_BOT_SCOPE=""
+SLACK_MEOWBOT_USER_SCOPE=""
+SLACK_MEOWBOT_OAUTH_ACCESS_TOKEN=""
+SLACK_MEOWBOT_REDDIT_MODQUEUE_WEBHOOK=""
