Add slack channel mod queue clearing

--- a/.env.example
+++ b/.env.example
@@ -62,6 +62,7 @@ SLACK_APP_TRYBOT_BOT_USER_OAUTH_ACCESS_TOKEN=""
 SLACK_APP_TRYBOT_CLIENT_ID=""
 SLACK_APP_TRYBOT_CLIENT_SECRET=""
 SLACK_APP_TRYBOT_VERIFICATION_TOKEN=""
+SLACK_APP_TRYBOT_SIGNING_SECRET=""
 SLACK_APP_TRYBOT_REDIRECT_URI="http://trybot2000.meow/auth/slack/callback"
 
 SLACK_APP_FANTASYBOT_OAUTH_ACCESS_TOKEN=""
@@ -91,4 +92,6 @@ SLACK_MEOWBOT_CLIENT_ID=""
 SLACK_MEOWBOT_BOT_SCOPE=""
 SLACK_MEOWBOT_USER_SCOPE=""
 SLACK_MEOWBOT_OAUTH_ACCESS_TOKEN=""
+SLACK_MEOWBOT_BOT_TOKEN=""
 SLACK_MEOWBOT_REDDIT_MODQUEUE_WEBHOOK=""
+SLACK_MEOWBOT_REDDIT_MODQUEUE_CHANNEL=""
