Fix twitch OAuth

--- a/.env.example
+++ b/.env.example
@@ -76,6 +76,7 @@ GOOGLE_GEOCODING_API_KEY=""
 API_AI_CLIENT_ACCESS_TOKEN=""
 
 TWITCH_API_CLIENT_ID=""
+TWITCH_API_CLIENT_SECRET=""
 
 SLACK_WEBHOOK_FANTASYFOOTBALL=""
 SLACK_WEBHOOK_TRYHARDFOOTBALL=""
