--- a/composer.json
+++ b/composer.json
@@ -6,17 +6,19 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "cloudcreativity/laravel-json-api": "^1.4",
+        "cloudcreativity/laravel-json-api": "^2.0@beta",
         "guzzlehttp/guzzle": "^6.3",
         "haruncpi/laravel-log-reader": "^1.0",
         "iboldurev/api-ai-php": "^0.2.5",
         "intervention/image": "^2.4",
         "ixudra/curl": "^6.10",
-        "jtant/laravel-env-sync": "^3.0",
-        "laravel/framework": "^6.0",
+        "laravel/framework": "^7.0",
         "laravel/slack-notification-channel": "^2.0",
         "laravel/socialite": "^4.0",
-        "laravel/tinker": "~1.0",
+        "laravel/telescope": "^3.5",
+        "laravel/tinker": "^2.0",
+        "laravel/ui": "^2.0",
+        "nunomaduro/collision": "^4.2",
         "pda/pheanstalk": "~4.0",
         "predis/predis": "^1.1",
         "socialiteproviders/slack": "^3.0",
@@ -24,13 +26,11 @@
         "venturecraft/revisionable": "^1.28"
     },
     "require-dev": {
-        "dms/phpunit-arraysubset-asserts": "^0.1.0",
+        "dms/phpunit-arraysubset-asserts": "^0.2.0",
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
-        "laravel/ui": "^1.2",
-        "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~8.0",
-        "sempro/phpunit-pretty-print": "^1.2"
+        "mockery/mockery": "^1.4",
+        "phpunit/phpunit": "^9.0"
     },
     "autoload": {
         "classmap": [
