--- a/composer.json
+++ b/composer.json
@@ -6,19 +6,19 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "cloudcreativity/laravel-json-api": "^2.0@beta",
-        "guzzlehttp/guzzle": "^6.3",
+        "cloudcreativity/laravel-json-api": "^3.0",
+        "guzzlehttp/guzzle": "^7.0.1",
         "haruncpi/laravel-log-reader": "^1.0",
-        "iboldurev/api-ai-php": "^0.2.5",
         "intervention/image": "^2.4",
         "ixudra/curl": "^6.10",
-        "laravel/framework": "^7.0",
+        "laravel/framework": "^8.0",
+        "laravel/legacy-factories": "^1.0",
         "laravel/slack-notification-channel": "^2.0",
-        "laravel/socialite": "^4.0",
-        "laravel/telescope": "^3.5",
+        "laravel/socialite": "^5.0",
+        "laravel/telescope": "^4.0",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.0",
-        "nunomaduro/collision": "^4.2",
+        "laravel/ui": "^3.0",
+        "nunomaduro/collision": "^5.0",
         "pda/pheanstalk": "~4.0",
         "predis/predis": "^1.1",
         "socialiteproviders/slack": "^3.0",
@@ -33,11 +33,10 @@
         "phpunit/phpunit": "^9.0"
     },
     "autoload": {
-        "classmap": [
-            "database"
-        ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Database\\Factories\\": "database/factories/",
+            "Database\\Seeders\\": "database/seeders/"
         }
     },
     "autoload-dev": {
